--- a/app/views/account/tasks/index.html.slim
+++ b/app/views/account/tasks/index.html.slim
@@ -7,19 +7,30 @@ table.table.datatable.table-striped
     th Статус
     th Файл
     th
+    th
   tbody
     - @tasks.each do |task|
       tr
         td style='width: 20%'
-          = link_to task.name, edit_account_task_path(task)
+          = link_to task.name, account_task_path(task)
         td= truncate task.description, length: 50
-        td= task.state
+        td= task.decorate.human_state
         td= task.decorate.file_link
         td
-          = link_to 'Просмотреть', account_task_path(task), class: 'btn btn-primary'
-          '
-          = link_to 'Редактировать', edit_account_task_path(task), class: 'btn btn-success'
-          '
-          = link_to 'Удалить', account_task_path(task), method: :delete, data: { confirm: 'Удалить задачу?' }, class: 'btn btn-danger'
+          = task.decorate.event_buttons
+        td
+          .btn-group
+            button.btn.btn-primary.dropdown-toggle type='button' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false'
+              | Действия
+              '
+              span.caret
+            ul.dropdown-menu
+              li
+                = link_to 'Просмотреть', account_task_path(task)
+              li
+                = link_to 'Редактировать', edit_account_task_path(task)
+              li.divider role='separator'
+              li
+                = link_to 'Удалить', account_task_path(task), method: :delete, data: { confirm: 'Удалить задачу?' }
 
 = will_paginate @tasks
