--- a/app/views/account/tasks/show.html.slim
+++ b/app/views/account/tasks/show.html.slim
@@ -1,17 +1,24 @@
 h2= @task.name
 hr
+- if flash.notice.present?
+  .alert.alert-success= flash.notice
+- if flash.alert.present?
+  .alert.alert-danger= flash.alert
 p
   b Описание:
   '
   = simple_format @task.description
 p
-  b Статус:
-  '
-  = @task.state
-p
   b Файл:
   '
   = @task.decorate.file_link
+p
+  b Статус:
+  '
+  = @task.decorate.human_state
+  br
+  br
+  = @task.decorate.event_buttons
 hr
 = link_to 'К списку задач', account_tasks_path, class: 'btn btn-default'
 '
